--- a/web01/company.html
+++ b/web01/company.html
@@ -281,6 +281,8 @@ $(document).ready(function(){
                                     <th>2019년</th>
                                     <th>2018년</th>
                                 </tr>
+                            </thead>
+                            <tbody>
                                 <tr>
                                     <th>내수판매</th>
                                     <th>727</th>
@@ -302,7 +304,7 @@ $(document).ready(function(){
                                     <th>4,426</th>
                                     <th>4,589</th>
                                 </tr>
-                            </thead>
+                            </tbody>
                         </div>
                     </div>
                     <div class="res">
@@ -317,6 +319,8 @@ $(document).ready(function(){
                                     <th>2019년</th>
                                     <th>2018년</th>
                                 </tr>
+                            </thead>
+                            <tbody>
                                 <tr>
                                     <th>매출액</th>
                                     <th>117,611</th>
@@ -359,7 +363,7 @@ $(document).ready(function(){
                                     <th>93.7%</th>
                                     <th>-63.8%</th>
                                 </tr>
-                            </thead>
+                            </tbody>
                         </div>
                     </div>
                 </div>
