--- a/web01/membership.html
+++ b/web01/membership.html
@@ -206,72 +206,73 @@ $(document).ready(function(){
                             <div class="man_sub" id="man2">
                                 <h3 class="man_tit">2. 서비스 대상</h3>
                                 <p class="man_con">
-                                <div class="tab">
-                                    <thead>
-                                        <tr>
-                                            <th>승용</th>
-                                            <th>상용</th>
-                                        </tr>
-                                        <tr>
-                                            <th>당사 국내 판매 차량 보유 블루멤버스 회원
+                                <ul class="tab">
+                                    <li>
+                                        <span>승용</span>
+                                        <span>상용</span>
+                                    </li>
+                                    <li>
+                                        <span>당사 국내 판매 차량 보유 블루멤버스 회원
 
-                                                · 차종 : 승용, SUV, MPV(스타리아), 소형상용(포터)차량
-                                                · 기간 : 신차 출고월 기준 연 1회 8년간 제공 (총8회)</th>
-                                            <th>당사 국내 판매 차량 보유 블루멤버스 회원 ('21.10.05 이후 제작증 발급차량)
+                                            · 차종 : 승용, SUV, MPV(스타리아), 소형상용(포터)차량
+                                            · 기간 : 신차 출고월 기준 연 1회 8년간 제공 (총8회)
+                                        </span>
+                                        <span>당사 국내 판매 차량 보유 블루멤버스 회원 ('21.10.05 이후 제작증 발급차량)
 
-                                                · 차종 : 디젤엔진 트럭 4개 차종 (마이티, 파비스, 뉴파워트럭, 엑시언트)
-                                                · 기간 : 신차 출고월 기준 3년간 총 7회차 제공
-                                                ※ CNG, FCEV 등 제외</th>
-                                        </tr>
-                                    </thead>
-                                </div>
+                                            · 차종 : 디젤엔진 트럭 4개 차종 (마이티, 파비스, 뉴파워트럭, 엑시언트)
+                                            · 기간 : 신차 출고월 기준 3년간 총 7회차 제공
+                                            ※ CNG, FCEV 등 제외
+                                        </span>
+                                    </li>
+                                </ul>
                                 </p>
                             </div>
                             <div class="man_sub" id="man3">
                                 <h3 class="man_tit">3. 서비스 내용</h3>
                                 <p class="man_con">
-                                <div class="tab">
-                                    <thead>
-                                        <tr>
-                                            <th>승용</th>
-                                            <th>상용</th>
-                                        </tr>
-                                        <tr>
-                                            <th>차량 기본 점검 및 에탄올 워셔액
+                                <ul class="tab">
+                                    <li>
+                                        <span>승용</span>
+                                        <span>상용</span>
+                                    </li>
+                                    <li>
+                                        <span>차량 기본 점검 및 에탄올 워셔액
 
-                                                · 1~6회차 엔진룸/하부/일반 점검 15종 및 에탄올 워셔액
-                                                · 7~8회차 엔진룸/하부/일반 점검 15종</th>
-                                            <th>차량 기본 점검　
+                                            · 1~6회차 엔진룸/하부/일반 점검 15종 및 에탄올 워셔액
+                                            · 7~8회차 엔진룸/하부/일반 점검 15종</th>
+                                        <span>차량 기본 점검　
 
-                                                · 1~2회차 엔진룸/하부/일반 점검 11종
-                                                · 3~7회차 엔진룸/하부/일반 점검 13종</th>
-                                        </tr>
-                                    </thead>
-                                </div>
+                                            · 1~2회차 엔진룸/하부/일반 점검 11종
+                                            · 3~7회차 엔진룸/하부/일반 점검 13종</th>
+                                        </span>
+                                    </li>
+                                </ul>
                                 </p>
                             </div>
                             <div class="man_sub" id="man4">
                                 <h3 class="man_tit">4. 점검 대상 기간 안내</h3>
                                 <p class="man_con">
-                                <div class="tab">
-                                    <thead>
-                                        <tr>
-                                            <th>승용</th>
-                                            <th>상용</th>
-                                        </tr>
-                                        <tr>
-                                            <th>신차(제작증발급일자) 출고 월 기준 연 1회 8년간 제공
+                                <ul class="tab">
+                                    <li>
+                                        <span>승용</span>
+                                        <span>상용</span>
+                                    </li>
+                                    <li>
+                                        <span>신차(제작증발급일자) 출고 월 기준 연 1회 8년간 제공
 
-                                                [예시 : ‘21년 2월 20일 출고 차량]
-                                                · 1회차 : ’21년 2월 20일 ~ ’22년 2월 28일
-                                                · 2~8회차 : 각 회차 해당년도 3월 1일 ~ 익년 2월 28일</th>
-                                            <th>신차(제작증발급일자) 출고 월 기준 3년간 7회차 제공　
+                                            [예시 : ‘21년 2월 20일 출고 차량]
+                                            · 1회차 : ’21년 2월 20일 ~ ’22년 2월 28일
+                                            · 2~8회차 : 각 회차 해당년도 3월 1일 ~ 익년 2월 28일
+                                        </span>
+                                    </li>
+                                    <li>
+                                        <span>신차(제작증발급일자) 출고 월 기준 3년간 7회차 제공　
 
-                                                · 1~2회차 : 출고 후 6개월까지
-                                                · 3~7회차 : 출고 6개월 이후 3년까지</th>
-                                        </tr>
-                                    </thead>
-                                </div>
+                                            · 1~2회차 : 출고 후 6개월까지
+                                            · 3~7회차 : 출고 6개월 이후 3년까지
+                                        </span>
+                                    </li>
+                                </ul>
                                 </p>
                             </div>
                             <div class="man_sub" id="man5">
