--- a/web01/login.html
+++ b/web01/login.html
@@ -34,11 +34,8 @@
 .page:after { content: ""; display: block; clear: both; }
 .page_wrap { width: 1200px; margin: auto; }
 
-.content { display: block; }
-.fm { width: 800px; height: 400px; border: 1px solid #ccc; margin: 10px auto; }
-.fm_lst { clear: both; }
-.fm_lst label { display: block; margin: 10px 40px; }
-.fm_lst input { display: block; width: 350px; height: 30px; padding-left: 0.8em; font-size: 14px; }
+.content { display: none; }
+.content:target { display: block; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
@@ -119,48 +116,26 @@ $(document).ready(function(){
         </header>
         <div class="content">
             <figure class="vs">
-                <img src="./img/bg4_visual.png" alt=""></img>
+                <img src="./img/bg1_visual.png" alt=""></img>
             </figure>
             <div class="bread">
                 <div class="bread_fr">
                     <a href="index.html" class="home">홈</a> &gt;
-                    <span class="sel">회원가입</span>
+                    <span class="sel">로그인</span>
                 </div>
             </div>
             <section class="page">
                 <div class="page_wrap">
-                    <h2 class="page_tit">회원가입</h2>
-                    <div class="join">
-                        <form action="" method="post" name="fm1" id="joinForm">
+                    <h2 class="page_tit">로그인</h2>
+                    <div class="login">
+                        <form action="" method="post" name="fm1" id="loginForm">
                             <table class="fm">
                                 <tbody>
-                                    <tr class="fm_lst">
+                                    <tr>
                                         <th><label for="id">아이디</label></th>
                                         <td>
-                                            <input type="text" id="id" name="id" class="info" required>
+                                            
                                         </td>
-                                    </tr>
-                                    <tr class="fm_lst">
-                                        <th><label for="id">비밀번호</label></th>
-                                        <td>
-                                            <input type="password" id="pw" name="pw" class="info" required>
-                                        </td>
-                                    </tr>
-                                    <tr class="fm_lst">
-                                        <th><label for="id">이름</label></th>
-                                        <td>
-                                            <input type="text" id="name" name="name" class="info" required>
-                                        </td>
-                                    </tr>
-                                    <tr class="fm_lst">
-                                        <th><label for="id">이메일</label></th>
-                                        <td>
-                                            <input type="email" id="email" name="email" class="info" required>
-                                        </td>
-                                    </tr>
-                                    <tr class="fm_btn">
-                                        <button type="reset" class="join_btn">취소</button>
-                                        <button type="submit" class="join_btn">회원가입</button>
                                     </tr>
                                 </tbody>
                             </table>
